[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "dyudovich",email = "yudovichml@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-fastapi-instrumentator (>=7.0.2,<8.0.0)",
    "fastapi[standard] (>=0.115.10,<0.116.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "faker (>=36.2.2,<37.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "pomodoro_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
